Update styles and content

--- a/src/components/global/Top.astro
+++ b/src/components/global/Top.astro
@@ -1,5 +1,10 @@
 <section>
-  <div class="text-center ">
- <p class="discord-blue top px-4 py-2 text-xs md:text-sm text-white">👋 if u want me to develop a custom bot for you, hit me up on  <span class="font-bold"><a href="https://discord.com">Discord</a></span></span>
+  <div class="text-center">
+    <p class="bg-red-600 top px-4 py-2 text-xs md:text-sm text-white">
+      👋 Estamos estrenando nuestra pagina web si tienes sugerencias envianos a
+      nuestro correo <span class="font-bold"
+        ><a href="https://discord.com">info@clubsaavedra.com</a></span
+      >
+    </p>
   </div>
 </section>
