--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,7 +1,20 @@
-<section>
-  <div class="mx-auto w-full max-w-2xl md:px-12 flex flex-col items-center pt-24 md:pt-36 text-center p-2">
-    <h1 class="text-white  text-3xl md:text-5xl lg:text-6xl font-extrabold max-w-3xl">Hey, I'm <span class="discord-blue px-4 ">ZayDocs</span> I Develop Stuff</h1>
-    <p class="description text-lg px-3 max-w-4xl pt-6 md:pt-12">Hi, I'm ZayDocs (Known as Panda Dev Online), ZayDocs is a talented 17 year old developer from the United States he creates discord bots for fun and owns a Verified bot called Purplexity.</p>
-
-  </div>
+<section
+  class="mx-auto w-full max-w-2xl md:px-12 flex flex-col items-center pt-24 md:pt-36 text-center p-2"
+>
+  <img
+    src="saavedra.png"
+    alt="logo-saavedra"
+    class="w-32 h-32 md:w-48 md:h-48 object-contain mb-6 animate-bounce"
+  />
+  <h1
+    class="text-6xl md:text-5xl lg:text-6xl font-extrabold text-gray-100 max-w-3xl"
+  >
+    <span class="bg-discord-blue px-4 rounded-md">COPA SAAVEDRA</span>
+  </h1>
+  <p class="description text-lg px-3 max-w-4xl pt-6 md:pt-12 text-gray-100">
+    La fiesta deportiva infantil, juvenil y femenina más grande de El Alto,
+    Bolivia del <span class="text-red-600 font-bold"
+      >22 al 27 de enero del 2024</span
+    >, en instalaciones del estadio de Villa Ingenio.
+  </p>
 </section>
