--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,22 +5,19 @@ import Hero from "../components/landing/Hero.astro";
 import Footer from "../components/global/Footer.astro";
 import Socials from "../components/landing/Socials.astro";
 
-
 import { AstroSeo } from "@astrolib/seo";
 ---
 
 <AstroSeo
-  title="Zerk"
-  description="A Portfolio site about zerk"
-  canonical="https://www.zerk.vercel.app"
+  title="Club Saavedra"
+  description="Club Saavedra es un club de fútbol de Bolivia, ubicado en el barrio de Saavedra, en la Ciudad de El Alto."
+  canonical="https://clubsaavedra.com/"
 />
 <BaseLayout>
-  <Top/>
+  <Top />
   <Hero />
   <Socials />
   <Footer />
 </BaseLayout>
-
-
 
 <!--- Crafted by Jamship -->
