--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
 /* Crafted by jamship */
 
 .discord-blue {
-        background-color: #5865F2;
+        background-color: #FF2503;
 }
 
 .invite-btn {
