Update package.json and landing page

--- a/src/components/landing/Socials.astro
+++ b/src/components/landing/Socials.astro
@@ -1,3 +1,7 @@
+---
+import pdfFile from "../../assets/pdf/convocatoria.pdf";
+---
+
 <section>
   <div
     class="flex grid-cols-3 gap-2 md:gap-3 justify-center pt-10 lg:pt-16 font-bold"
@@ -5,27 +9,24 @@
     <div
       class="discord-blue rounded-lg text-white py-1 md:py-2 px-2 md:px-6 text-md md:text-xl cursor-pointer"
     >
-      <a href="https://dsc.gg/qc-dev" target="_blank" rel="noopener">Historia</a
-      >
+      <a href="/" target="_blank" rel="noopener">Mas información</a>
     </div>
     <div
       class="discord-blue rounded-lg text-white py-1 md:py-2 px-2 md:px-6 text-md md:text-xl cursor-pointer"
     >
-      <a href="https://instagram.com" target="_blank" rel="noopener"
-        >Instagram</a
-      >
+      <a href="/" target="_blank" rel="noopener">Inscritos</a>
     </div>
     <div
       class="discord-blue rounded-lg text-white py-1 md:py-2 px-2 md:px-6 text-md md:text-xl cursor-pointer"
     >
-      <a href="https://youtube.com" target="_blank" rel="noopener">Youtube</a>
+      <a href={pdfFile} download="convocatoria.pdf">Descargar convocatoria</a>
     </div>
   </div>
   <div class="flex grid-cols-1 gap-3 justify-center pt-8 font-bold">
     <div
       class="bg-green-500 text-white py-1.5 md:py-3 px-3 md:px-6 text-md rounded-lg cursor-pointer"
     >
-      <a href="https://dsc.gg/Purplexity" target="_blank" rel="noopener"
+      <a href="https://wa.me/qr/ZN4HWHZBK3HCI1" target="_blank" rel="noopener"
         >WhatsApp</a
       >
     </div>
