--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Top from "../components/global/Top.astro";
 import Hero from "../components/landing/Hero.astro";
 import Footer from "../components/global/Footer.astro";
 import Socials from "../components/landing/Socials.astro";
+import Map from "../components/landing/Map.astro";
 
 import { AstroSeo } from "@astrolib/seo";
 ---
@@ -17,6 +18,7 @@ import { AstroSeo } from "@astrolib/seo";
   <Top />
   <Hero />
   <Socials />
+  <Map />
   <Footer />
 </BaseLayout>
 
