Update metadata and content in BaseHead, Hero, Map, Socials, and index.astro files

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,15 +7,11 @@ import "../styles/global.css";
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="author" content="Jamship" />
-<link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+<meta name="author" content="Luis Fernando CS" />
+<link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 
 <meta
-  name="Zerk"
-  content="A portfolio site about zerk - discord bot developer"
+  name="Club Saavedra"
+  content="Club Saavedra es un club de barrio que ofrece actividades deportivas y culturales para todas las edades. Estamos ubicados en varios barrios en la ciudad de El Alto."
 />
-
-<!---- Crafted by Jamship  -->
-
-
