--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -9,12 +9,11 @@
   <h1
     class="text-6xl md:text-5xl lg:text-6xl font-extrabold text-gray-100 max-w-3xl"
   >
-    <span class="bg-discord-blue px-4 rounded-md">COPA SAAVEDRA</span>
+    <span class="bg-discord-blue px-4 rounded-md">CLUB SAAVEDRA</span>
   </h1>
   <p class="description text-lg px-3 max-w-4xl pt-6 md:pt-12 text-gray-100">
-    La fiesta deportiva infantil, juvenil y femenina más grande de El Alto,
-    Bolivia del <span class="text-red-600 font-bold"
-      >22 al 27 de enero del 2024</span
-    >, en instalaciones del estadio de Villa Ingenio.
+    Bienvenidos a la página web del Club Saavedra, un club de fútbol y escuela
+    de fútbol de la ciudad de El Alto, contamos con todas las categorías desde
+    los 5 años hasta la categoría profesional.
   </p>
 </section>
