--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { AstroSeo } from "@astrolib/seo";
 
 <AstroSeo
   title="Club Saavedra"
-  description="Club Saavedra es un club de fútbol de Bolivia, ubicado en el barrio de Saavedra, en la Ciudad de El Alto."
+  description="Club Saavedra es un club de fútbol de Bolivia, ubicado en el barrio  en varias zonas , en la Ciudad de El Alto."
   canonical="https://clubsaavedra.com/"
 />
 <BaseLayout>
