--- a/src/components/landing/Map.astro
+++ b/src/components/landing/Map.astro
@@ -1,7 +1,7 @@
 <div class="mx-auto w-full max-w-2xl rounded-lg overflow-hidden py-5">
-  <h1 class="text-center font-bold py-5 text-3xl">Ubicación</h1>
+  <h1 class="text-center font-bold py-5 text-3xl text-white">Ubicación</h1>
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15304.23302437229!2d-68.2018624!3d-16.4725876!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915ee0833986fc95%3A0x18c6ef89408f4fbe!2sEstadium%20Villa%20Ingenio!5e0!3m2!1ses!2sbo!4v1703819569108!5m2!1ses!2sbo"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4791.763776770451!2d-68.18874959716176!3d-16.498167268353228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915edfabd32c70dd%3A0x9d838f14321aed9e!2sCLUB%20SAAVEDRA!5e0!3m2!1ses!2sbo!4v1709420827038!5m2!1ses!2sbo"
     width="100%"
     height="450"
     style="border:0;"
