--- a/src/components/landing/Socials.astro
+++ b/src/components/landing/Socials.astro
@@ -4,23 +4,9 @@ import pdfFile from "../../assets/pdf/convocatoria.pdf";
 
 <section>
   <div
-    class="flex grid-cols-3 gap-2 md:gap-3 justify-center pt-10 lg:pt-16 font-bold"
+    class="flex justify-center items-center text-2xl md:text-4xl font-bold py-8 dark:text-white text-white"
   >
-    <div
-      class="discord-blue rounded-lg text-white py-1 md:py-2 px-2 md:px-6 text-md md:text-xl cursor-pointer"
-    >
-      <a href="/" target="_blank" rel="noopener">Mas información</a>
-    </div>
-    <div
-      class="discord-blue rounded-lg text-white py-1 md:py-2 px-2 md:px-6 text-md md:text-xl cursor-pointer"
-    >
-      <a href="/" target="_blank" rel="noopener">Inscritos</a>
-    </div>
-    <div
-      class="discord-blue rounded-lg text-white py-1 md:py-2 px-2 md:px-6 text-md md:text-xl cursor-pointer"
-    >
-      <a href={pdfFile} download="convocatoria.pdf">Descargar convocatoria</a>
-    </div>
+    PROXIMAMENTE
   </div>
   <div class="flex grid-cols-1 gap-3 justify-center pt-8 font-bold">
     <div
